<resources>
    <string name="app_name">MPR Lab</string>
    <string name="passwordET">Password</string>
    <string name="usernameET">Username</string>
    <string name="registerBT">Sign Up</string>
    <string name="sign_inBT">Sign in</string>
    <string name="action_indicator">Action</string>
    <string name="confirm_passwordET">Confirm Password</string>
    <string name="emailET">Email</string>
    <string name="about_text">OK</string>
    <string name="hidup">Hidup</string>
    <string name="mati">Mati</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="button">Button</string>
</resources>