<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="100dp"
        android:id="@id/username"
        android:hint="@string/usernameET"
        android:autofillHints="Username must be filled"
        android:inputType="text"
        android:width="200dp"
        android:height="40dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/emailET"
        android:autofillHints="Email must be filled"
        android:width="200dp"
        android:height="40dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:id="@id/password"
        android:inputType="textPassword"
        android:hint="@string/passwordET"
        android:autofillHints="Password must be filled"
        android:width="200dp"
        android:height="40dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:hint="@string/confirm_passwordET"
        android:width="200dp"
        android:height="40dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerBT"
        android:id="@id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        android:layout_marginTop="12dp"
        android:width="200dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>